--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "illarra/core-bundle",
   "description": "Core functionality.",
   "keywords": ["core", "utility", "bundle"],
-  "homepage": "https://bitbucket.org/illarra/illarracorebundle",
+  "homepage": "https://github.com/illarra/IllarraCoreBundle",
   "type": "symfony-bundle",
   "license": "MIT",
   "authors": [
