--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     }
   ],
   "require": {
-    "php": ">=5.4"
+    "php": ">=5.4",
+    "knplabs/knp-menu-bundle": "2.0.*"
   },
   "require-dev": {
     "symfony/framework-bundle": ">=2.3,<2.4-dev"
