--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     }
   ],
   "require": {
-    "php": ">=5.4",
-    "knplabs/knp-menu-bundle": "2.0.*"
+    "php": ">=5.4"
   },
   "require-dev": {
     "symfony/framework-bundle": ">=2.3,<2.4-dev"
