--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "knplabs/doctrine-behaviors": "1.0.*",
         "knplabs/knp-menu-bundle": "2.0.*",
         "lexik/form-filter-bundle": "dev-master",
-        "white-october/pagerfanta-bundle": "v1.0.0",
+        "white-october/pagerfanta-bundle": "v1.0.0"
     },
     "require-dev": {
         "symfony/framework-bundle": ">=2.3,<2.4-dev"
